# protolang

./: .env  .envrc  .gitignore  Cargo.toml  Makefile  NOTES.md  README.md  build.zig  flake.nix
benches/: start.rs  test.p
codegen/: Cargo.toml
codegen/src/: interpreter.rs  lib.rs  lower.rs  testing.rs  visit.rs
codegen/src/hir/: constructors.rs  mod.rs  module.rs  types.rs
codegen/src/llvm/: builtin.rs  compile.rs  decisiontree.rs  generator.rs  mod.rs  testing.rs
codegen/src/util/: mod.rs
codegen/tests/: compiler.rs
codegen_backend/: Cargo.toml
codegen_interp/: Cargo.toml
codegen_interp/src/: eval.rs  lib.rs
codegen_ir/: Cargo.toml
codegen_ir/src/: lib.rs  scan.rs  testing.rs  visit.rs
codegen_ir/src/hir/: constructors.rs  mod.rs  module.rs  printer.rs  types.rs
codegen_ir/src/util/: mod.rs
codegen_llvm/: Cargo.toml  README.md
codegen_llvm/src/: backend.rs  codegen.rs  execute.rs  lib.rs  livelink.rs
data/: Cargo.toml
data/src/: env.rs
examples/: analyze.rs  bfs.rs  c.p  compiler.rs  dfs.rs  ir.p  mutable.p  recursion.p  test.p
freestanding/: Cargo.toml
freestanding/.cargo/: config.toml
frontend/: Cargo.toml
frontend/examples/: fetest.rs  test.py  test.x
frontend/src/: codemap.rs  lib.rs  lower.rs
frontend/src/assert/: assert.rs  conformance.rs  mod.rs
frontend/src/errors/: mod.rs
frontend/src/syntax/: ast.rs  grammar_tests.rs  lexer_tests.rs  mod.rs  parser.rs
frontend/src/values/: mod.rs
frontend/src/values/string/: fast_string.rs  mod.rs
lang1/: Cargo.toml  README.md
lang1/benches/: start.rs
lang1/examples/: analyze.rs  bfs.rs  compiler.rs  dfs.rs  recursion.p  runtime.c
lang1/src/: lib.rs  program.rs  repl.rs  results.rs  tokens.rs
lang1/src/ast/: expr.rs  mod.rs  op.rs
lang1/src/compiler/: check.rs  hirgen.rs  ircodegen.rs  lower.rs  mod.rs
lang1/src/eval/: analysis.rs  builtins.rs  interpreter.rs  types.rs
lang1/src/ir/: check.rs  mod.rs  types.rs
lang1/src/lexer/: location.rs  state.rs  surround.rs
lang1/src/parser/: mod.rs  pratt.rs  unparse.rs
lang2/: Cargo.toml
lang2/src/: env.rs  lib.rs  lower.rs  visitor.rs
lang2/src/ast/: builder.rs  mod.rs
lang2/src/typesystem/: mod.rs  types.rs  unify.rs
lang3/: Cargo.toml
lang3/src/: ast.rs  base.rs  builder.rs  env.rs  interpreter.rs  lib.rs  printer.rs  types.rs  visitor.rs
link/: Cargo.toml  README.md
link/examples/: dynamic_print.rs  link-test.rs  linkexe.rs  read.rs  write.rs  write_dynamic.rs
link/src/: builder.rs  disassemble.rs  error.rs  lib.rs  linker.rs  live.rs  live2.rs  memory.rs  module.rs  parse_elf.rs  process_maps.rs  relocations.rs  segment.rs
link/src/linker/: block_section.rs  blocks.rs  libraries.rs  linker.rs  mod.rs  reader.rs  relocations.rs  table.rs  version.rs  writer.rs
link/src/writer/: blocks.rs  dynamics.rs  mod.rs  section.rs  segments.rs  statics.rs
link/testfiles/: asdf.c  empty_main.c  link_shared.c  live.c  print_stuff.c  segfault.c  segfault_handle.c  simplefunction.c  start.c  uvtest.c
link/tests/: link-test.rs
logic/: Cargo.toml  README.md
logic/examples/: test.rs
logic/src/: lib.rs  main.rs  unify.rs
src/: ast.rs  builtins.rs  compiler.rs  function.rs  interpreter.rs  lexer.rs  lib.rs  parser.rs  pratt.rs  program.rs  repl.rs  results.rs  sexpr.rs  tokens.rs  value.rs
src/ast/: callback.rs  expr.rs  function.rs  generic.rs  mod.rs  node.rs  op.rs  value.rs  visitor.rs
src/codegen/: mod.rs
src/compiler/: cps.rs  direct.rs  env.rs  mod.rs  types.rs  values.rs
src/eval/: analysis.rs  builtins.rs  env.rs  interpreter.rs  mod.rs  types.rs
src/ir/: check.rs  mod.rs  types.rs
src/lexer/: error.rs  lex.rs  location.rs  mod.rs  state.rs  string.rs  surround.rs
src/parser/: error.rs  mod.rs  pratt.rs  pratt1.rs  unparse.rs
watch/: Cargo.toml
watch/benches/: reload.rs
watch/examples/: asdf.py  reload.rs  watch.rs
watch/src/: main.rs  runner.rs
