[package]
name = "protolang"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
codespan = "0.11"
codespan-reporting = "0.11"
nom = "7"
nom_locate = "4"
anyhow = { version = "1", features = ["backtrace"] }
rustyline = "9.1"
itertools = "0.10"
strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
rpds = "0.11"
im = "15"
#ariadne = "0.1"
miette = { version = "3.1", features = ["fancy"] }
thiserror = "*"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm13-0"] }
ante = { path = "../ante" }

[dev-dependencies]
criterion = "0.3"
test-log = "0.2"

[[bench]]
name = "start"
harness = false
