[package]
name = "codegen"
version = "0.0.1"
authors = [""]
edition = "2021"

[lib]
name = "codegen"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2.0.0"
mimalloc = { version = "0.1.29", default-features = false }
difference = "2.0.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm13-0"], optional = true }
target-lexicon = "0.12.4"
clap_complete = "4"

[dev-dependencies]
goldentests = "1.1.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
debug = true

[features]
default = ["llvm"]
llvm = ["inkwell"]
