[package]
name = "codegen"
version = "0.0.1"
authors = [""]
edition = "2021"

[lib]
name = "codegen"
edition = "2021"

[dependencies]
colored = "2.0.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm13-0"], optional = true }
ron = "0.8"
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
data = { path = "../data" }
rpds = "0.11"

[dev-dependencies]
goldentests = "1.1.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
debug = true

[features]
default = ["llvm"]
llvm = ["inkwell"]
