[package]
name = "codegen_llvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm13-0"], optional = true }
codegen_ir = { path = "../codegen_ir" }
capstone = "^0.11"
object = { version = "^0.29", features = ["write"] }
memmap = "^0.7"

[features]
default = ["llvm"]
llvm = ["inkwell"]
