[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.7"

[dependencies]
gazebo.version = "0.8.1"
gazebo.features = ["str_pattern_extensions"]
logos = "0.12"
lsp-types = "0.93.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lalrpop-util = "0.19.7"
anyhow = "1.0.65"
thiserror = "1.0.36"
num-bigint = "0.4.3"
num-traits = "0.2"
walkdir = "2.3"
itertools = "0.10"
derivative = "2.2"
derive_more = "0.99"
strsim = "0.10.0"
static_assertions = "1.1.0"
annotate-snippets = { version = "0.9.0", features = ["color"] }
memchr = "2.4.1"
lang3 = { path = "../lang3" }
once_cell = "1.8"
env_logger = "0.9"

