[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starlark_syntax = { git = "https://github.com/facebookexperimental/starlark-rust.git", branch = "main" }
lang3 = { path = "../lang3" }
env_logger = "0.9"
log = "0.4"

[dev-dependences]

