[package]
name = "lang2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"
rpds = "0.11"
log = "0.4"
im = "15"
env_logger = "0.9"
codegen = { path = "../codegen" }

[dev-dependencies]
criterion = "0.3"
test-log = "0.2"


