[package]
name = "link"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capstone = "^0.11"
object = { version = "^0.29", features = ["write"] }
memmap = "^0.7"
im = "^15"
libloading = "^0.7" 
linked_list_allocator = "^0.10"
libc = "*"
proc-maps = "^0.3"

[lib]
name = "link"
crate_type = ["dylib", "rlib", "staticlib"]

[[example]]
name = "link-test"
