[package]
name = "watch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = { version = "5.0.0", features = ["serde"] }
codegen_llvm = { path = "../codegen_llvm" }
codegen_ir = { path = "../codegen_ir" }
frontend = { path = "../frontend" }
lang3 = { path = "../lang3" }
link = { path = "../link" }
env_logger = "*"
